fix layout shift

--- a/src/components/styles/Product.css
+++ b/src/components/styles/Product.css
@@ -36,10 +36,6 @@
 }
 
 
-.product-price {
-  color: var(--highlight-color-two);
-}
-
 .product-name {
   width: 130px;
   text-overflow: ellipsis;
